fix legend alignment

--- a/viz-lib/src/visualizations/addressable-pie/Renderer.less
+++ b/viz-lib/src/visualizations/addressable-pie/Renderer.less
@@ -15,14 +15,13 @@
 
 .legend-item {
   display: flex;
-  gap: 4px;
+  gap: 8px;
   align-items: center;
 }
 
 .legend-title {
   font-size: 12px;
   color: rgb(71 78 106);
-  width: 80px;
 }
 
 .legend-value {
